gitops/kustomize/artifacts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artifacts
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
