gitops/kustomize/artifacts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serve-artifacts
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: serve-artifacts
    app.kubernetes.io/component: web
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - artifacts.yolo.scapegoat.dev
      secretName: serve-artifacts-tls
  rules:
    - host: artifacts.yolo.scapegoat.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serve-artifacts
                port:
                  number: 80
